--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Pillow>=9.0.0
 numpy>=1.21.0
 tifffile>=2023.3.15
 czifile>=2019.7.2
-opencv-python >=4.10.0
+opencv-python-headless >=4.10.0
 pyyaml>=6.0.2
 scikit-image>=0.24.0
 json>=2.0.9
